--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
         <title>Lifelight Tattoos - Template One</title>
         <!-- <link rel="icon" type="image/x-icon" href="ENTER IMAGE PATH HERE" /> -->
         <!-- Fonts -->
-        <!-- Bootstrap Styling -->        
+        <!-- Bootstrap Styling -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -53,18 +54,24 @@
         </header>
 
 
-        <!-- Portfolio/tattoo gallery -->
-        <section class="py-5 bg-light">
+        <!-- Portfolio/tattoo gallery -->        
+        <section class="bg-light py-5">
             <div class="container">
-                <h2>Artists</h2>
-                <div class="carousel slide" data-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img class="d-block w-100" src="assets/masthead.jpg" alt="First slide">
+                <h2 class="text-center pb-3">Artists</h2>
+                <div class="row">
+                    <!-- Image carousel -->
+                    <div class="carousel slide col-sm-8" data-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img class="d-block w-100" src="assets/masthead.jpg" alt="First slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="assets/testImage1.jpg" alt="Second slide">
+                            </div>
                         </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="assets/testImage1.jpg" alt="Second slide">
-                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <p>Maybe have a drop down box to select the artist that changes the carousel based on the artist that did the work.</p>
                     </div>
                 </div>
             </div>            
@@ -72,12 +79,21 @@
 
         <!-- Image break -->
         <section>
-            <h1> Yeet</h1>
+            <div class="parallax">
+                
+            </div>
         </section>
 
         <!-- Contact, socials -->
-        <section>
-
+        <section class="bg-dark py-5 text-light">
+            <div class="container">
+                <h2 class="text-center pb-3">Socials</h2>
+                <div class="">
+                    <a href="#" class="fa fa-facebook"></a>
+                    <a href="#" class="fa fa-instagram"></a>
+                    <a href="#" class=""></a>
+                </div>
+            </div>
         </section>
 
         <!-- Footer info -->
