Some mild changes to layout etc

--- a/index.html
+++ b/index.html
@@ -71,27 +71,30 @@
                         </div>
                     </div>
                     <div class="col-sm-4">
+                        <h4>Artist Name</h4>
                         <p>Maybe have a drop down box to select the artist that changes the carousel based on the artist that did the work.</p>
+                        <p>Sphinx of black quartz, judge my vow. The quick brown fox jumped over the lazy dog. Sphinx of black quartz, judge my vow. The quick brown fox jumped over the lazy dog.</p>
                     </div>
                 </div>
             </div>            
-        </section>
+        </section> 
 
-        <!-- Image break -->
+        <!-- Parallax image break -->
         <section>
-            <div class="parallax">
-                
-            </div>
+            <div class="parallax"></div>
         </section>
 
         <!-- Contact, socials -->
         <section class="bg-dark py-5 text-light">
             <div class="container">
                 <h2 class="text-center pb-3">Socials</h2>
-                <div class="">
-                    <a href="#" class="fa fa-facebook"></a>
-                    <a href="#" class="fa fa-instagram"></a>
-                    <a href="#" class=""></a>
+                <div>
+                    <button type="button" class="btn btn-primary btn-lg btn-circle">
+                        <i class="fa fa-facebook"></i>
+                    </button>
+                    <button type="button" class="btn btn-primary btn-lg btn-circle">
+                        <i class="fa fa-instagram"></i>
+                    </button>
                 </div>
             </div>
         </section>
