Small change to navbar height

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="description" content="A simple website template for a tattoo parlor." />
         <meta name="author" content="Benjamin Casey" />
         <title>Lifelight Tattoos - Template One</title>
+        <!-- TODO: Icon -->
         <!-- <link rel="icon" type="image/x-icon" href="ENTER IMAGE PATH HERE" /> -->
         <!-- Fonts -->
         <!-- Bootstrap Styling -->
@@ -20,7 +21,7 @@
         <link href="css/style.css" rel="stylesheet" />
     </head>
 
-    <!-- TODO: REMOVE INLINE STYLING -->
+    <!-- Page Content -->
     <body>
         <!-- Navigation -->
         <nav class="navbar navbar-dark bg-dark navbar-expand-sm fixed-top" id="navbar">
@@ -88,13 +89,19 @@
         <section class="bg-dark py-5 text-light">
             <div class="container">
                 <h2 class="text-center pb-3">Socials</h2>
-                <div>
-                    <button type="button" class="btn btn-primary btn-lg btn-circle">
-                        <i class="fa fa-facebook"></i>
-                    </button>
-                    <button type="button" class="btn btn-primary btn-lg btn-circle">
-                        <i class="fa fa-instagram"></i>
-                    </button>
+                <div class="row text-center">
+                    <div class="col-sm-4"></div>
+                    <div class="col-sm text-right">
+                        <button type="button" class="btn btn-primary btn-lg btn-circle">
+                            <i class="fa fa-facebook"></i>
+                        </button>
+                    </div>
+                    <div class="col-sm text-left">
+                        <button type="button" class="btn btn-primary btn-lg btn-circle">
+                            <i class="fa fa-instagram"></i>
+                        </button>
+                    </div>
+                    <div class="col-sm-4"></div>
                 </div>
             </div>
         </section>
