--- a/index.html
+++ b/index.html
@@ -107,8 +107,18 @@
         </section>
 
         <!-- Footer info -->
-        <footer>
-
+        <footer class="about py-5 text-light">
+            <div class="container">
+                <h2 class="text-center pb-3">About</h2>
+                <div class="row">
+                    <div class="col-sm">
+                        <h3>Test 1</h3>
+                    </div>
+                    <div class="col-sm">
+                        <h3>Test 2</h3>
+                    </div>
+                </div>
+            </div>
         </footer>
     </body>
 
