--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
     <!-- Page Content -->
     <body>
         <!-- Navigation -->
-        <nav class="navbar navbar-dark bg-dark navbar-expand-sm fixed-top" id="navbar">
+        <nav class="navbar navbar-dark bg-dark navbar-expand-sm fixed-top" id="navbar">      
+            <a class="navbar-brand" href="#">
+                <img src="assets/free-sun-icon-3335-thumb.png" height=35>
+            </a>
             <!-- Branding and toggle button -->
             <!--            <a class="navbar-brand" href="#">Lifelight Tattoos</a>-->
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks">
@@ -57,17 +60,20 @@
 
         <!-- Portfolio/tattoo gallery -->        
         <section class="bg-light py-5">
-            <div class="container">
+            <div class="container pb-3">
                 <h2 class="text-center pb-3">Artists</h2>
                 <div class="row">
                     <!-- Image carousel -->
                     <div class="carousel slide col-sm-8" data-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img class="d-block w-100" src="assets/masthead.jpg" alt="First slide">
+                                <img class="d-block w-100" src="assets/Tattoo1.jpg" alt="First slide">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="assets/testImage1.jpg" alt="Second slide">
+                                <img class="d-block w-100" src="assets/Tattoo2.jpg" alt="Second slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="assets/Tattoo3.jpg" alt="Second slide">
                             </div>
                         </div>
                     </div>
