--- a/gallery.html
+++ b/gallery.html
@@ -39,7 +39,7 @@
                 <ul class="navbar-nav">
                     <li class="nav-item"> <a href="index.html" class="nav-link">Home</a> </li>
                     <li class="nav-item"> <a href="" class="nav-link">About</a> </li>
-                    <li class="nav-item"> <a href="gallery.html" class="nav-link">Gallery</a> </li>
+                    <li class="nav-item"> <a href="" class="nav-link">Gallery</a> </li>
                     <li class="nav-item"> <a href="" class="nav-link">Contact</a> </li>
                 </ul>
             </div>
@@ -50,7 +50,7 @@
             <div class="container h-100">
                 <div class="row h-100 align-items-center">
                     <div class="col-12 text-center">
-                        <h1 class="font-weight-light">Lifelight Tattoos</h1>
+                        <h1 class="font-weight-light">Gallery</h1>
                         <p class="lead">Modern artistic tattoists in Brisbane</p>
                     </div>
                 </div>
